# engine

./: .gitignore  8D Inverse.ipynb  8D Investigations.ipynb  8D Structure Also.ipynb  8D Structure.ipynb  CLAUDE.md  Engine.ipynb  LICENSE  README.md  Testing Clif.ipynb  pyproject.toml
clifford/: __init__.py  context.py  multivector.py  sign_table.py  util.py
clifford/inverse/: __init__.py  euclidean.py  fls.py  jones.py  newton.py  self_reverse_6d.py  self_reverse_7d.py  shirokov.py  sparse_fls.py  sri.py
docs/: Makefile  README.rst  clifford.rst  conf.py  fls_performance.rst  index.rst  inverting_7d.rst
docs/notebooks/development/: api_examples.ipynb  benchmarks.ipynb  fls_sri_walkthrough.ipynb  index.md  ns_iteration.ipynb  table_generation.ipynb
notebooks/: Model Inverses.ipynb
