[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clifford"
version = "0.1.0"
description = "Clifford-algebra engine: multivector inverse algorithms"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "numba>=0.58",
]

[project.optional-dependencies]
dev = ["jupyter", "ipykernel", "ruff"]

[tool.setuptools]
packages = ["clifford", "clifford.inverse"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["scratch", "notebooks", "Inverse", "clifford/eight"]

[tool.ruff.lint]
select = ["E", "F", "I"]
